--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="./animator.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./YogiBear.js"></script>
+    <script type="text/javascript" src="./sceneManager.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 
 </head>
