--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
 </head>
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black" tabindex="0" autofocus></canvas>
+    <div>
+        <label>W, A, S, D to move Yogi around</label>
+    </div>
 </body>
 </html>
